2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* update-mime-database.c (write_magic_cache): Reset the match data
	offset when starting to write out match datas, pointed out by
	Alex Larsson.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: search a bit further in ASF playlists
	(GNOME bug #323683)

2005-12-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add ChangeLog MIME type "text/x-changelog".
	Fixes #5355. Thanks to Björn Lindqvist and Paolo Borelli.

2005-12-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Modify Ogg-related MIME types to match the
	XML naming pattern. Thanks to Peter Bowen.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Ogg-related MIME types:
	"audio/x-vorbis", "audio/x-oggflac", "audio/x-speex", "video/x-theora"
	and "video/x-ogm". Make them subtypes of "application/ogg".
	Fixes #1002.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "application/x-mozilla-bookmarks"
	subtype of "text/html". Fixes #3169. Thanks to Reinout van Schouwen.

2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* shared-mime-info-spec.xml: Add acronym and expanded-acronym
	elements, add recommendations for handling duplicate globs.
	Specify how duplicate globs are stored in mime.cache.

	* update-mime-database.c (process_freedesktop_node): Allow 
	identical globs.
	(insert_suffix): Store duplicate globs in the suffix tree
	by using '\0' as a key.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "text/xml" to "application/xml", make
	the former an alias. Improve SVG, TIFF and JNG comments.
	Thanks to Eric van der Vlist.

2005-11-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "application/x-troff" to
	"text/troff", make the latter an alias, also add "text/x-troff" alias.
	Fixes #5072. Thanks to Tristan Miller.
